fix: 修复编辑器区中 scrollbar 不同的问题

--- a/common/plugin/custom-apply/View/src/entry/adapter/index.module.scss
+++ b/common/plugin/custom-apply/View/src/entry/adapter/index.module.scss
@@ -188,6 +188,8 @@
       padding-right: 16px;
       max-height: 500px;
       overflow-y: scroll;
+
+      @include scrollbar();
     }
   }
 }
